Cores api extension

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,8 @@
-- registar todas as extensões, middlewares etc no registry, com:
-    - register: registry.registerUtility(CLASS, INTERFACE_CLASS)
-    - get: OPTIONS = registry.queryUtility(INTERFACE_CLASS, **SEARCH_KWARGS)
 - https://uwsgi-docs.readthedocs.org/en/latest/Python.html
+- script create babel templates / update / compile
+- start application wsgi.py
+    - If this application run in a process fork only the father is updated!
+    - update all process childs
+- add logs to DB
+- add core actions
+    - possible to revert actions
