--- a/TODO.txt
+++ b/TODO.txt
@@ -15,3 +15,5 @@
     - code
     - allow column on attributes
 - improve Core child/father objects
+- validar se o start e end date dos cores ao actualizar e adicionar ficam no timeline de outros do mesmo tipo
+- get core tem de relaccionar com o pai (e avos se preciso) para validar se o mesmo está activo
