--- a/ines/locale/pt/LC_MESSAGES/ines.po
+++ b/ines/locale/pt/LC_MESSAGES/ines.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2015-06-30 20:41+0100\n"
+"POT-Creation-Date: 2015-06-30 21:38+0100\n"
 "PO-Revision-Date: 2015-06-16 18:22+0100\n"
 "Last-Translator: Hugo Branquinho <hugobranq@gmail.com>\n"
 "Language-Team: Portuguese\n"
@@ -272,8 +272,8 @@ msgid "Invalid \"skype\" username"
 msgstr "Contacto \"skype\" inválido"
 
 #: ines/api/utils.py:16
-msgid "Try again later"
-msgstr "Tente novamente mais tarde"
+msgid "Too many tries. Try again later"
+msgstr "Demasiadas tentativas. Tente novamente mais tarde"
 
 #: ines/views/fields.py:380
 msgid "Page"
