--- a/ines/locale/pt/LC_MESSAGES/ines.po
+++ b/ines/locale/pt/LC_MESSAGES/ines.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2015-06-30 21:38+0100\n"
+"POT-Creation-Date: 2015-07-02 19:30+0100\n"
 "PO-Revision-Date: 2015-06-16 18:22+0100\n"
 "Last-Translator: Hugo Branquinho <hugobranq@gmail.com>\n"
 "Language-Team: Portuguese\n"
@@ -270,6 +270,14 @@ msgstr "Número inválido"
 #: ines/validator.py:73
 msgid "Invalid \"skype\" username"
 msgstr "Contacto \"skype\" inválido"
+
+#: ines/api/mailer.py:165
+msgid "Send queue emails"
+msgstr "Enviar emails em lista de espera"
+
+#: ines/api/storage.py:532
+msgid "Create configurated images"
+msgstr "Criar imagens configuradas"
 
 #: ines/api/utils.py:16
 msgid "Too many tries. Try again later"
